@@ -155,9 +155,6 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
   changed_message_timeout   "'Timeout for Messages' Updated."
   force_password_change     "More than $days days have passed since you last changed your password. You must create a new one before you can continue."
   password_mismatch	        "Password fields do not match."
-  password_mismatch	        "Password fields do not match."
-  password_mismatch	        "Password fields do not match."
-  password_mismatch	        "Password fields do not match."
 </Module>
 
 <Module "Krang::CGI::MyAlerts">
