@@ -297,18 +297,18 @@ sub check_in_and_save {
     eval { $story->move_to_desk($desk_id); };
 
     if ($@ and ref($@) and $@->isa('Krang::Story::CheckedOut')) {
-	add_alert(
+        add_alert(
             'story_cant_move_checked_out',
             id   => $story->story_id,
             desk => (pkg('Desk')->find(desk_id => $query->param('checkin_to')))[0]->name
         );
     } elsif ($@ and ref($@) and $@->isa('Krang::Story::NoDesk')) {
-	add_alert( 
+        add_alert( 
             'story_cant_move_no_desk',
             story_id   => $story->story_id,
             desk_id    => $desk_id 
         );
-	return $self->edit;
+	    return $self->edit;
     }
 
     # remove story from session
