@@ -273,8 +273,6 @@ Workspace
     </tr>
   </tmpl_loop></tbody>
 
-  </table>
-
   <tmpl_include HTMLPager/pager-pagination.tmpl>
 
   <div class="panel capped">
